Update project changes
